2013-01-16  Vladimir Serbinenko  <phcoder@gmail.com>

	Add new command pcidump.

2013-01-16  Vladimir Serbinenko  <phcoder@gmail.com>

	New terminal outputs using serial: morse and spkmodem.

2013-01-16  Vladimir Serbinenko  <phcoder@gmail.com>

	Improve bidi handling in entry editor.

2013-01-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/lexer.c (grub_script_lexer_init): Rename getline
	argument to prevent name collision.

2013-01-15  Colin Watson  <cjwatson@ubuntu.com>

	Remove nested functions from script reading and parsing.

	* grub-core/kern/parser.c (grub_parser_split_cmdline): Add
	getline_data argument, passed to getline.
	* grub-core/kern/rescue_parser.c (grub_rescue_parse_line): Add
	getline_data argument, passed to grub_parser_split_cmdline.
	* grub-core/script/lexer.c (grub_script_lexer_yywrap): Pass
	lexerstate->getline_data to lexerstate->getline.
	(grub_script_lexer_init): Add getline_data argument, saved in
	lexerstate->getline_data.
	* grub-core/script/main.c (grub_normal_parse_line): Add getline_data
	argument, passed to grub_script_parse.
	* grub-core/script/script.c (grub_script_parse): Add getline_data
	argument, passed to grub_script_lexer_init.
	* include/grub/parser.h (grub_parser_split_cmdline): Update
	prototype.  Update all callers to pass appropriate getline data.
	(struct grub_parser.parse_line): Likewise.
	(grub_rescue_parse_line): Likewise.
	* include/grub/reader.h (grub_reader_getline_t): Add void *
	argument.
	* include/grub/script_sh.h (struct grub_lexer_param): Add
	getline_data member.
	(grub_script_parse): Update prototype.  Update all callers to pass
	appropriate getline data.
	(grub_script_lexer_init): Likewise.
	(grub_normal_parse_line): Likewise.

	* grub-core/commands/legacycfg.c (legacy_file_getline): Add unused
	data argument.
	* grub-core/kern/parser.c (grub_parser_execute: getline): Make
	static instead of nested.  Rename to ...
	(grub_parser_execute_getline): ... this.